# ars-magica-helper

./: CMakelists.txt  README.md  index.html  todolist.md
ars-client/: Cargo.toml
ars-desktop-app/: Cargo.toml
ars-web-client/: Cargo.toml
ars-webclient-app/: Cargo.toml  index.html
ars-webclient-app/src/: lib.rs  main.rs
ars-webclient-app/src/components/atoms/: age_display.rs  ars_button.rs  character_name.rs  character_portrait.rs  circle_border.rs  decrepitude_display.rs  flaw_display.rs  mod.rs  personality_display.rs  reputation_display.rs  soak_size_display.rs  virtue_display.rs  warp_display.rs  wound_display.rs
ars-webclient-app/src/components/molecules/: abilities_list.rs  characteristics_list.rs  mod.rs  page_view_select.rs
ars-webclient-app/src/components/organisms/: character_info.rs  details_display.rs  mod.rs  nav_bar.rs  page_display.rs  side_bar.rs
ars-webclient-app/src/css/: global.css
data/test-characters/: simple.txt
src/: error.cpp  error.hpp  main.cpp  parsing.cpp  parsing.hpp  state_trackers.cpp  state_trackers.hpp  tests.h  value_manager.hpp
