[package]
name = "ars-web-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.21.0"
serde = "1.0"
tokio = "1.34"
eyre = "0.6.9"
bacon = "2.14"
tracing = "0.1.4"

[dev-dependencies]
rand = "0.8"