[package]
name = "ars-webclient-app"
authors = ["Jonathan Kump <landon2002@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
tokio = "1.34"
yew = { version = "0.21.0",  features = ["csr"] }
stylist = { version = "0.13", features = ["yew", "yew_use_style", "parser", "macros"] }
gloo = "0.11"